@@ -1,0 +1,4 @@
+debian/askpass
+debian/doc/*.[0-9]
+debian/doc/variables.xml
+debian/scripts/passdev
