@@ -6,7 +6,8 @@ Uploaders: Jonas Meurer <jonas@freesources.org>, Guilhem Moulin <guilhem@debian.
 Build-Depends: autoconf,
                automake (>= 1:1.12),
                autopoint,
-               debhelper (>= 9.20160403~),
+               debhelper (>= 11~),
+               dh-exec,
                dh-strip-nondeterminism,
                docbook-xml,
                docbook-xsl (>= 1.74.3+dfsg),
