@@ -1,4 +1,0 @@
-/sbin
-/usr/sbin
-/usr/share/locale
-/usr/share/man/man8
