@@ -1,7 +1,0 @@
-/etc/cryptsetup-initramfs
-/usr/share/cryptsetup/initramfs/bin
-/usr/share/initramfs-tools/conf-hooks.d
-/usr/share/initramfs-tools/hooks
-/usr/share/initramfs-tools/scripts/local-block
-/usr/share/initramfs-tools/scripts/local-bottom
-/usr/share/initramfs-tools/scripts/local-top
