@@ -1,0 +1,8 @@
+debian/initramfs/conf-hook				/etc/cryptsetup-initramfs/
+debian/initramfs/cryptroot-unlock			/usr/share/cryptsetup/initramfs/bin/
+debian/initramfs/hooks/*				/usr/share/initramfs-tools/hooks/
+debian/initramfs/conf-hooks.d/cryptsetup		/usr/share/initramfs-tools/conf-hooks.d/
+debian/initramfs/scripts/local-block/cryptroot		/usr/share/initramfs-tools/scripts/local-block/
+debian/initramfs/scripts/local-bottom/cryptopensc	/usr/share/initramfs-tools/scripts/local-bottom/
+debian/initramfs/scripts/local-top/cryptopensc		/usr/share/initramfs-tools/scripts/local-top/
+debian/initramfs/scripts/local-top/cryptroot		/usr/share/initramfs-tools/scripts/local-top/
