@@ -1,0 +1,9 @@
+debian/askpass				/lib/cryptsetup/
+debian/bash_completion/cryptdisks	/usr/share/bash-completion/completions/
+debian/checks/*				/lib/cryptsetup/checks/
+debian/cryptdisks-functions		/lib/cryptsetup/
+debian/functions			/lib/cryptsetup/
+debian/scripts/cryptdisks_*		/sbin/
+debian/scripts/decrypt_*		/lib/cryptsetup/scripts/
+debian/scripts/luksformat		/usr/sbin/
+debian/scripts/passdev			/lib/cryptsetup/scripts/
