@@ -1,0 +1,2 @@
+debian/doc/*.5
+debian/doc/*.8
