@@ -1,0 +1,7 @@
+debian/askpass				/lib/cryptsetup/
+debian/checks/*				/lib/cryptsetup/checks/
+debian/cryptdisks-functions		/lib/cryptsetup/
+debian/functions			/lib/cryptsetup/
+debian/scripts/decrypt_*		/lib/cryptsetup/scripts/
+debian/scripts/passdev			/lib/cryptsetup/scripts/
+sbin/cryptsetup
