@@ -1,0 +1,4 @@
+#!/usr/bin/dh-exec
+debian/tmp/lib/${DEB_HOST_MULTIARCH}/*.so		/usr/lib/${DEB_HOST_MULTIARCH}/
+debian/tmp/lib/${DEB_HOST_MULTIARCH}/pkgconfig/*.pc	/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/
+usr/include/*.h
